<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".registerlogin.LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gradient" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/spik" />

    <EditText
        android:id="@+id/emailAddressConnexion"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:autoText="false"
        android:background="@drawable/text_border"
        android:capitalize="none"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="@string/adresse_mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="?attr/hintTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordConnexion"
        app:layout_constraintEnd_toEndOf="@+id/passwordConnexion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordConnexion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <EditText
        android:id="@+id/passwordConnexion"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="?attr/hintTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/connexionButton"
        app:layout_constraintEnd_toEndOf="@+id/connexionButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/connexionButton" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/pas_encore_de_compte_inscrivez_vous"
        android:textColor="@color/lightBlue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/connexionButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/connexionButton"
        app:layout_constraintTop_toBottomOf="@+id/connexionButton" />

    <Button
        android:id="@+id/connexionButton"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginBottom="140dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/connexion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightBlue"
        app:cornerRadius="30dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/mot_de_passe_oubli"
        android:textColor="@color/lightBlue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/textRegister"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textRegister"
        app:layout_constraintTop_toBottomOf="@+id/textRegister"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>