<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".registerlogin.LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gradient" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/spik" />

    <EditText
        android:id="@+id/emailForgot"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:autoText="false"
        android:background="@drawable/text_border"
        android:capitalize="none"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="@string/adresse_mail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="?attr/hintTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/r_initialiser_le_mot_de_passe"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightBlue"
        app:cornerRadius="30dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/emailForgot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailForgot"
        app:layout_constraintTop_toBottomOf="@+id/emailForgot"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>